# theadmissionarchitect

./: .gitignore
Backend/: .gitignore  README.md  Run_command.txt  api.py  councelling_module.py  gre_module.py  ielts_module.py  import_universities.py  main.py  pyproject.toml  requirements.txt  universities_data.csv
Backend/database/: connection.py  init_db.py
Backend/database/models/: ChatMessage_model_fix.py  __init__.py  models.py
the-admission-architect-web/: app.js  package-lock.json  package.json
the-admission-architect-web/public/css/: style.css
the-admission-architect-web/views/: airport-transfer.ejs  booking.ejs  chat.ejs  cost-calculator.ejs  history.ejs  home.ejs  info-careers.ejs  info-cost-calculator.ejs  info-find-university.ejs  info-living-abroad.ejs  info-privacy.ejs  info-student-essentials.ejs  info-terms.ejs  info-test-prep.ejs  info-virtual-counselling.ejs  info-visa.ejs  landing.ejs  login.ejs  mock-test.ejs  module-article.ejs  profile.ejs  settings.ejs  support-bot.ejs  test-modules.ejs  university.ejs  voice.ejs
the-admission-architect-web/views/partials/: footer.ejs  navbar.ejs
